# ProtectIt

./: .gitignore  CMakeLists.txt  HideWindow.c  HideWindow.h  Injector.hpp  Utils.h  dri_callbacks.c  dri_callbacks.h  dri_notify.c  dri_notify.h  dri_protector.c  dri_protector.h  dri_stringset.h  dri_ullset.h  load.bat  main.cpp  protectordef.h  readme.md  unload.bat
